# polling-site-cicd

./: README.md  docker-compose.yml
.github/workflows/: depoly.yaml
polling-site-backend/: Cargo.toml  Dockerfile  README.md  temp.rs
polling-site-backend/src/: main.rs
polling-site-backend/src/config/: jwt_middleware.rs  mod.rs  webauth_utilities.rs
polling-site-backend/src/controllers/: mod.rs
polling-site-backend/src/controllers/authHandlers/: get_passkey_auth_state.rs  get_passkey_registration.rs  get_user_credentials.rs  get_user_credentials_passkeys.rs  mod.rs  store_passkey_auth_state.rs  store_passkey_registration.rs  store_user_credential.rs  update_credential_counter.rs
polling-site-backend/src/controllers/websockets/: lobby.rs  messages.rs  start_connection.rs  ws.rs
polling-site-backend/src/routes/: mod.rs
polling-site-backend/src/routes/auth/: finish_authentication.rs  finish_registration.rs  finish_verification.rs  mod.rs  register_start.rs  start_authentication.rs  start_verification.rs
polling-site-backend/src/routes/polling/: check_attempted.rs  close_poll.rs  create_poll.rs  get_polls.rs  get_quiz.rs  mod.rs  question_scores.rs  reset_poll.rs  vote_handler.rs
polling-site-frontend/: Dockerfile
polling-site-frontend/src/app/(home)/polls/manage/[pollid]/: page.tsx
